Revise README for project structure and functionality
Updated README to reflect new project structure and features.