@@ -35,56 +35,44 @@
 
 ```
 23KTPM1-Java-PJ1/
+├─ README.md
 ├─ data/
 │  └─ slang.txt
 ├─ storage/
 │  └─ history.log
-├─ lib/
-│  └─ javafx-sdk-25.0.1/lib/*.jar
+├─ 23KTPM1-Java-PJ1.jar (double click để chạy)
 └─ src/
-   ├─ app/
-   │  └─ Main.java
-   ├─ core/
-   │  ├─ SlangDictionary.java
-   │  ├─ HistoryService.java
-   │  └─ QuizService.java
-   ├─ io/
-   │  └─ FileManager.java
-   ├─ model/
-   │  └─ Entry.java
-   └─ ui/
-      ├─ MainView.java
-      └─ QuizView.java
+   ├─ main
+      ├─ java
+         ├─ app/
+         │  ├─ Main.java
+         |  └─ Launcher.java
+         ├─ core/
+         │  ├─ SlangDictionary.java
+         │  ├─ HistoryService.java
+         │  └─ QuizService.java
+         ├─ io/
+         │  └─ FileManager.java
+         ├─ model/
+         │  └─ Entry.java
+         └─ ui/
+            ├─ MainView.java
+            ├─ QuizView.java
+            └─ HistoryView.java
 ```
 
 ---
 
 ## 4. Cách chạy chương trình
 
-### Yêu cầu
-- Java 25 (Temurin / OpenJDK 25)  
-- JavaFX SDK 25.0.1 đã được tải và thêm vào project  
-
-### Thêm thư viện JavaFX
-1. Giải nén SDK vào thư mục `lib/javafx-sdk-25.0.1/`
-2. Vào File → Project Structure → Modules → Dependencies
-   - Add Library → JavaFX lib folder → Scope = Compile  
-
-### Cấu hình VM options (bắt buộc)
-```
---module-path "lib" --add-modules javafx.controls,javafx.fxml
-```
-
-### Run Configuration
-- Main class: `app.Main`
-- Working directory: thư mục gốc project (để load `data/slang.txt`)
+### Double click vào file .jar để chạy
 
 ---
 
 ## 5. Giao diện chính (JavaFX)
 
 - MenuBar: File / View / Help  
-- ToolBar: Tìm kiếm, Random, Quiz, Dark mode  
+- ToolBar: Random, View History, Quiz, Dark mode  
 - SplitPane:  
   - Trái: Search Slang / Definition  
   - Giữa: Bảng hiển thị slang + nghĩa (TableView)  
@@ -97,24 +85,23 @@
 
 | STT | Chức năng | Mô tả | Đạt yêu cầu |
 |:--:|:--|:--|:--:|
-| 1 | Tìm kiếm theo slang | Nhập slang → tra nhanh | Cập nhật sau |
-| 2 | Tìm theo definition | Nhập từ khóa trong nghĩa | Cập nhật sau |
-| 3 | Lưu history | Ghi lại các slang đã tìm | Cập nhật sau |
-| 4 | Thêm slang | Thêm slang mới, cảnh báo trùng | Cập nhật sau |
-| 5 | Sửa slang | Sửa nghĩa slang | Cập nhật sau |
-| 6 | Xóa slang | Xoá slang có confirm | Cập nhật sau |
-| 7 | Reset data | Phục hồi từ file gốc | Cập nhật sau |
-| 8 | Random slang | Hiển thị ngẫu nhiên 1 slang | Cập nhật sau |
-| 9 | Quiz S→D | Đố vui slang → nghĩa | Cập nhật sau |
-| 10 | Quiz D→S | Đố vui nghĩa → slang | Cập nhật sau |
+| 1 | Tìm kiếm theo slang | Nhập slang → tra nhanh | Có |
+| 2 | Tìm theo definition | Nhập từ khóa trong nghĩa | Có |
+| 3 | Lưu history | Ghi lại các slang đã tìm | Có |
+| 4 | Thêm slang | Thêm slang mới| Có |
+| 5 | Sửa slang | Sửa nghĩa slang | Có |
+| 6 | Xóa slang | Xoá slang có confirm | Chưa có confirm |
+| 7 | Reset data | Phục hồi từ file gốc | Có |
+| 8 | Random slang | Hiển thị ngẫu nhiên 1 slang | Có |
+| 9 | Quiz S→D | Đố vui slang → nghĩa | Có |
+| 10 | Quiz D→S | Đố vui nghĩa → slang | Có |
 
 ---
 
 ## 7. Dữ liệu & Lưu trữ
 - File chính: `data/slang.txt`  
 - Lịch sử tìm kiếm: `storage/history.log`  
-- Cấu trúc dữ liệu: `HashMap<String, List<String>>`  
-- Tự động ghi lại khi Add / Edit / Delete  
+- Cấu trúc dữ liệu: `Map, Set, List`   
 - Có thể Save thủ công từ Menu hoặc Toolbar  
 
 ---
@@ -129,10 +116,10 @@
 
 ## 9. Video demo
 
-- Video YouTube: (cập nhật sau)  
+- Video YouTube: [https://www.youtube.com/watch?v=oy_3gjYYmFY](https://www.youtube.com/watch?v=oy_3gjYYmFY) 
 - Nội dung video gồm:  
   - Giới thiệu cấu trúc dữ liệu và mô hình  
-  - Demo ít nhất 1 chức năng (ví dụ: Search hoặc Quiz)  
+  - Demo 10 chức năng  
   - Nêu phần trăm code tự viết và phần tham khảo (nếu có)  
 
 ---
@@ -140,7 +127,6 @@
 ## 10. Tài liệu tham khảo
 - Slide bài giảng môn Lập trình ứng dụng Java – FIT HCMUS  
 - Tài liệu chính thức: [OpenJFX Documentation](https://openjfx.io/) 
-
 ---
 
 ## 11. Quy định điểm
@@ -149,7 +135,6 @@
 - Nếu giao diện không tiện dụng → trừ 30%  
 - Nếu <10 commits → 0 điểm toàn bài  
 - Nếu copy code → 0 điểm toàn bộ phần thực hành  
-
 ---
 
 ## 12. Tác giả & Liên hệ
